--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Site header -->
     <header>
         <nav>
-            <a lang="en" href="/index.html">
+            <a lang="en" href="./index.html">
                 <span>Web</span>Studio</a>
             <ul>
                 <li><a href="">Студія</a></li>
@@ -18,13 +18,13 @@
             </ul>
         </nav>
         <ul>
-            <li><a href="http://info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="mailto://info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>  
     </header>
     <main>
         <!-- Hero section -->
-        <section>
+        <section>aaq
             <h1>Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
@@ -70,22 +70,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/Team/photo_1.jpg" alt="Ігор Дем'яненко фото" width="270" height="260">
+                    <img src="./images/team/photo_1.jpg" alt="Ігор Дем'яненко фото" width="270" height="260">
                     <h3>Ігор Дем'яненко</h3>
                     <p lang="en">Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Team/photo_2.jpg" alt="Ольга Рєпіна фото" width="270" height="260">
+                    <img src="./images/team/photo_2.jpg" alt="Ольга Рєпіна фото" width="270" height="260">
                     <h3>Ольга Рєпіна</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Team/photo_3.jpg" alt="Микола Тарасов фото" width="270" height="260">
+                    <img src="./images/team/photo_3.jpg" alt="Микола Тарасов фото" width="270" height="260">
                     <h3>Микола Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Team/photo_4.jpg" alt="Михайло Єрмаков фото" width="270" height="260">
+                    <img src="./images/team/photo_4.jpg" alt="Михайло Єрмаков фото" width="270" height="260">
                     <h3>Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
@@ -93,18 +93,18 @@
         </section>
     </main>
     <footer>
-        <a lang="en" href="/index.html">
+        <a lang="en" href="./index.html">
             <span>Web</span>Studio
         </a>
         <address>
             <ul>
                 <li>
-                    <a href="http://surl.li/cvcik">м. Київ, пр-т Лесі Українки, 26</a>
+                    <a href="https://goo.gl/maps/q37ei5Kf7AUgtXnX9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li>
-                    <a href="http://info@devstudio.com" 
-                    target="_blank"
-                    rel="noopener noreferrer nofollow">info@devstudio.com</a>
+                    <a href="mailto://info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
